Added CDC test and more test helpers
* Added a test for the CDC events, verying they are published correctly;

* Added some more classes so we can interact with the containers during
the tests.